--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Build PDF
         run: |
+          cd src
           latexmk -pdf -outdir=out ./main.tex
 
       - uses: actions/upload-artifact@v4
